--- a/NuPlug/packages.config
+++ b/NuPlug/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
+  <package id="MSBuildTasks" version="1.4.0.88" targetFramework="net45" />
   <package id="NuGet.Core" version="2.8.5" targetFramework="net45" />
+  <package id="NuGet.Packaging" version="1.0.0-pre-20150220044603" targetFramework="net45" />
+  <package id="NuGet.Versioning" version="1.0.7" targetFramework="net45" />
+  <package id="OneClickBuild" version="1.3.4.0" targetFramework="net45" />
 </packages>
