--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ nuget:
 build_script:
 - build NuPlug\NuPlug.csproj /t:Build /v:m
 before_deploy:
-- nuget setapikey %apiKey%  
+- nuget setapikey %apiKey% -Verbosity quiet
 deploy_script:
 - build NuPlug\NuPlug.csproj /t:Deploy /v:m
 test: off
