gitflow/appveyor deployment, cf.: http://www.appveyor.com/docs/branches#conditional-build-configuration

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,35 @@
-version: 0.1.0.{build}
-environment:
-  apiKey:
-    secure: lrwREUV4nO99AU0A6xVx/MNF0BaJc8A1B8dwEGMLqmYKGqD5E7PJ/IC9RHcle6pk
-nuget:
-  disable_publish_on_pr: true
-build_script:
-- build.bat NuPlug.sln /t:CoverageReport /v:m
-after_build:
-- ps: >-
-    $wc = New-Object 'System.Net.WebClient'
-    $wc.UploadFile("https://ci.appveyor.com/api/testresults/xunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\testresults\NuPlug.Tests.xml))
-before_deploy:
-- nuget setapikey %apiKey% -Verbosity quiet
-deploy_script:
-- build.bat NuPlug.sln /t:Deploy /v:m
-test: off
+# configuration for "master" branch
+-
+  branches:
+    only:
+      - master
+  version: 0.1.0.{build}
+  test: off
+  nuget:
+    disable_publish_on_pr: true
+  environment:
+    apiKey:
+      secure: lrwREUV4nO99AU0A6xVx/MNF0BaJc8A1B8dwEGMLqmYKGqD5E7PJ/IC9RHcle6pk
+  before_build:
+  - nuget setapikey %apiKey% -Verbosity quiet
+  build_script:
+  - build.bat NuPlug.sln /t:CoverageReport;Deploy /v:m
+  after_build:
+  - ps: >-
+      $wc = New-Object 'System.Net.WebClient'
+    
+      $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\testresults\NuPlug.Tests.xml))
+
+# all other branches
+-
+  version: 0.1.0.{build}
+  test: off
+  nuget:
+    disable_publish_on_pr: true
+  build_script:
+  - build.bat NuPlug.sln /t:CoverageReport /v:m
+  after_build:
+  - ps: >-
+      $wc = New-Object 'System.Net.WebClient'
+    
+      $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\testresults\NuPlug.Tests.xml))
