--- a/NuPlug/NuPlug.csproj
+++ b/NuPlug/NuPlug.csproj
@@ -52,7 +52,9 @@
       <Link>Properties\VersionInfo.g.cs</Link>
     </Compile>
     <Compile Include="IPackageContainer.cs" />
-    <Compile Include="PackageContainer.cs" />
+    <Compile Include="MefPackageContainer.cs" />
+    <Compile Include="NugetPackageContainer.cs" />
+    <Compile Include="OutputFolderPackageContainer.cs" />
     <Compile Include="PackageManagerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
