--- a/NuPlug/packages.config
+++ b/NuPlug/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
-  <package id="MSBuildTasks" version="1.4.0.88" targetFramework="net45" />
-  <package id="NuGet.Core" version="2.8.5" targetFramework="net45" />
-  <package id="OneClickBuild" version="1.3.4.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="3.3.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" userInstalled="true" />
+  <package id="NEdifis" version="0.4.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="NSubstitute" version="1.8.1.0" targetFramework="net45" userInstalled="true" />
+  <package id="NuGet.Core" version="2.8.5" targetFramework="net45" userInstalled="true" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" userInstalled="true" />
 </packages>
