--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,8 @@
     only:
       - master
   version: 0.1.3.{build}
-  test: off
+  os: Visual Studio 2015 RC
+ test: off
   nuget:
     disable_publish_on_pr: true
   environment:
@@ -23,6 +24,7 @@
 # all other branches
 -
   version: 0.1.3.{build}
+  os: Visual Studio 2015 RC
   test: off
   nuget:
     disable_publish_on_pr: true
