--- a/NuPlug/NuPlug.csproj
+++ b/NuPlug/NuPlug.csproj
@@ -42,8 +42,8 @@
     <Reference Include="Microsoft.Web.XmlTransform">
       <HintPath>..\packages\Microsoft.Web.Xdt.2.1.1\lib\net40\Microsoft.Web.XmlTransform.dll</HintPath>
     </Reference>
-    <Reference Include="NEdifis, Version=0.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NEdifis.0.4.0.0\lib\NEdifis.dll</HintPath>
+    <Reference Include="NEdifis, Version=0.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NEdifis.0.4.1.0\lib\net45\NEdifis.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NSubstitute, Version=1.8.1.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
@@ -72,6 +72,8 @@
     <Compile Include="NugetPackageContainer.cs" />
     <Compile Include="PackageManagerExtensions.cs" />
     <Compile Include="PackageManagerExtensions_Should.cs" />
+    <Compile Include="PackageRepositoryExtensions.cs" />
+    <Compile Include="PackageRepositoryExtensions_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VersionHelper_Should.cs" />
     <Compile Include="VersionHelper.cs" />
