--- a/Samples/ConsoleSample/App.config
+++ b/Samples/ConsoleSample/App.config
@@ -1,6 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <!-- custom trace listeners -->
+  <system.diagnostics>
+    <trace autoflush="true">
+      <listeners>
+        <add name="nlog" type="NLog.NLogTraceListener, NLog" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
