--- a/NuPlug/NuPlug.csproj
+++ b/NuPlug/NuPlug.csproj
@@ -66,13 +66,16 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assemblies.cs" />
     <Compile Include="AssemblyResolver.cs" />
     <Compile Include="IPackageContainer.cs" />
+    <Compile Include="IResolveAssembly.cs" />
     <Compile Include="PackageContainer.cs" />
     <Compile Include="PackageContainer_Should.cs" />
     <Compile Include="NugetPackageContainer.cs" />
     <Compile Include="PackageManagerExtensions.cs" />
     <Compile Include="PackageManagerExtensions_Should.cs" />
+    <Compile Include="PackageRepositories.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VersionHelper_Should.cs" />
     <Compile Include="VersionHelper.cs" />
