--- a/Samples/ConsoleSample/packages.config
+++ b/Samples/ConsoleSample/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" userInstalled="true" />
+  <package id="NLog" version="3.2.1" targetFramework="net45" userInstalled="true" />
+  <package id="NLog.Config" version="3.2.1" targetFramework="net45" userInstalled="true" />
+  <package id="NLog.Schema" version="3.2.1" targetFramework="net45" userInstalled="true" />
 </packages>
