--- a/Samples/RestPlugin/RestPlugin.csproj
+++ b/Samples/RestPlugin/RestPlugin.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CDD33868-DACC-40E2-B757-8121AA4C2F68}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebApiPlugin</RootNamespace>
-    <AssemblyName>WebApiPlugin</AssemblyName>
+    <RootNamespace>RestPlugin</RootNamespace>
+    <AssemblyName>RestPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -107,10 +107,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InfoController.cs" />
     <Compile Include="OwinStarter.cs" />
     <Compile Include="OwinWebApiConfig.cs" />
-    <Compile Include="WebApiPluginModule.cs" />
+    <Compile Include="RestPluginModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VersionController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Plugin.targets">
@@ -119,6 +121,12 @@
     <None Include="app.config" />
     <None Include="Package.nuspec" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PluginContracts\PluginContracts.csproj">
+      <Project>{E7141F20-86C9-41A7-985D-9C24287C61EF}</Project>
+      <Name>PluginContracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.build\build.targets" />
