--- a/NuPlug/packages.config
+++ b/NuPlug/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="3.3.0" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" userInstalled="true" />
-  <package id="NEdifis" version="0.4.1.0" targetFramework="net45" userInstalled="true" />
-  <package id="NSubstitute" version="1.8.1.0" targetFramework="net45" userInstalled="true" />
-  <package id="NuGet.Core" version="2.8.5" targetFramework="net45" userInstalled="true" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" userInstalled="true" />
+  <package id="FluentAssertions" version="4.0.1" targetFramework="net45" />
+  <package id="GitVersionTask" version="3.3.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
+  <package id="NEdifis" version="0.4.1.0" targetFramework="net45" />
+  <package id="NSubstitute" version="1.9.2.0" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.9.0" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnit.Runners" version="2.6.4" targetFramework="net45" />
+  <package id="OneClickBuild" version="1.6.2" targetFramework="net45" />
+  <package id="OpenCover" version="4.6.166" targetFramework="net45" />
+  <package id="ReportGenerator" version="2.3.4.0" targetFramework="net45" />
 </packages>
