--- a/Samples/RestPlugin/packages.config
+++ b/Samples/RestPlugin/packages.config
@@ -1,20 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.5.2" targetFramework="net452" userInstalled="true" />
-  <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net452" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" userInstalled="true" />
-  <package id="Owin" version="1.0" targetFramework="net452" userInstalled="true" />
-  <package id="Swashbuckle.Core" version="5.1.5" targetFramework="net452" userInstalled="true" />
+  <package id="Autofac" version="3.5.2" targetFramework="net452" />
+  <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
+  <package id="GitVersionTask" version="3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="NUnit.Runners" version="2.6.4" targetFramework="net452" />
+  <package id="OneClickBuild" version="1.6.2" targetFramework="net452" />
+  <package id="OpenCover" version="4.6.166" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="ReportGenerator" version="2.3.4.0" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net452" />
 </packages>
