--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,15 +3,18 @@
   branches:
     only:
       - master
-  version: 0.1.7.{build}
-  os: Visual Studio 2015 RC
+  install:
+    - choco install gitversion.portable -pre -y
   test: off
+  assembly_info:
+    patch: false
   nuget:
     disable_publish_on_pr: true
   environment:
     apiKey:
       secure: lrwREUV4nO99AU0A6xVx/MNF0BaJc8A1B8dwEGMLqmYKGqD5E7PJ/IC9RHcle6pk
   before_build:
+    - ps: gitversion /l console /output buildserver
   - nuget setapikey %apiKey% -Verbosity quiet
   build_script:
   - build.bat NuPlug\NuPlug.csproj /t:Deploy /v:m
@@ -23,13 +26,17 @@
 
 # all other branches
 -
-  version: 0.1.7.{build}
-  os: Visual Studio 2015 RC
+  install:
+    - choco install gitversion.portable -pre -y
   test: off
+  assembly_info:
+    patch: false
   nuget:
     disable_publish_on_pr: true
+  before_build:
+    - ps: gitversion /l console /output buildserver
   build_script:
-  - build.bat NuPlug\NuPlug.csproj /t:Package /v:m
+    - build.bat OneClickBuild\OneClickBuild.csproj /t:Package /v:m
  # after_build:
  # - ps: >-
  #     $wc = New-Object 'System.Net.WebClient'
