--- a/Samples/PluginContracts/packages.config
+++ b/Samples/PluginContracts/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GitVersionTask" version="3.3.0" targetFramework="net45" developmentDependency="true" />
-  <package id="NUnit.Runners" version="2.6.4" targetFramework="net45" />
-  <package id="OneClickBuild" version="1.6.2" targetFramework="net45" />
+  <package id="NUnit.Console" version="3.0.0" targetFramework="net45" />
+  <package id="NUnit.Runners" version="3.0.0" targetFramework="net45" />
+  <package id="OneClickBuild" version="1.7.2" targetFramework="net45" />
   <package id="OpenCover" version="4.6.166" targetFramework="net45" />
   <package id="ReportGenerator" version="2.3.4.0" targetFramework="net45" />
 </packages>
