--- a/solution.targets
+++ b/solution.targets
@@ -6,5 +6,15 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
   </ItemGroup>
-  
+
+  <!-- ## Using NUnit 3 -->
+  <PropertyGroup>
+    <UseNUnit3>true</UseNUnit3>
+    <NUnitResultFormat>nunit3</NUnitResultFormat>
+  </PropertyGroup>
+
+  <!-- ## Automatically import project-specific overrides (place this last) -->
+  <Import Project="$(ProjectDir)\$(ProjectName).targets"
+     Condition="Exists('$(ProjectDir)\$(ProjectName).targets') And '$(NCrunch)' != '1'"/>
+
 </Project>
