--- a/Samples/SamplePlugin/packages.config
+++ b/Samples/SamplePlugin/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="GitVersionTask" version="3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="NUnit" version="2.6.4" targetFramework="net452" />
   <package id="NUnit.Console" version="3.0.0" targetFramework="net452" />
   <package id="NUnit.Runners" version="3.0.0" targetFramework="net452" />
   <package id="OneClickBuild" version="1.7.2" targetFramework="net452" />
