--- a/NuPlug/NuPlug.csproj
+++ b/NuPlug/NuPlug.csproj
@@ -83,8 +83,11 @@
     <Compile Include="PackageRepositories.cs" />
     <Compile Include="PackageRepositories_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeAssemblyCatalog.cs" />
+    <Compile Include="SafeDirectoryCatalog.cs" />
     <Compile Include="TraceLogger.cs" />
     <Compile Include="TraceLogger_Should.cs" />
+    <Compile Include="TypeLoadExtensions.cs" />
     <Compile Include="VersionHelper_Should.cs" />
     <Compile Include="VersionHelper.cs" />
   </ItemGroup>
