--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@
   before_build:
     - ps: gitversion /l console /output buildserver
   build_script:
-    - build.bat OneClickBuild\OneClickBuild.csproj /t:Test;Package /v:m
+    - build.bat NuPlug\NuPlug.csproj /t:Test;Package /v:m
  # after_build:
  # - ps: >-
  #     $wc = New-Object 'System.Net.WebClient'
