removed private pushing again.
- Appveyor feeds can only be accessed with credentials. So you will have to clean up manually whereas pushing would be automated --> You cannot catch up and we don't want to spam AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,12 +28,7 @@
     patch: false
   nuget:
     disable_publish_on_pr: true
-  environment:
-    apiKey:
-      secure: nOI+DF6dG2DnZOaNxLKvfpP5RW8Mc6peyzCcnIIFndE=
-    NuGetSourceToDeploy: https://ci.appveyor.com/nuget/awesome-inc-build-y5l243ydeuam/api/v2/package
   before_build:
     - ps: gitversion /l console /output buildserver
-    - nuget setapikey %apiKey% -Source %NuGetSourceToDeploy% -Verbosity quiet
   build_script:
-    - build.bat NuPlug\NuPlug.csproj /t:Test;Deploy /v:m
+    - build.bat NuPlug\NuPlug.csproj /t:Test;Package /v:m
