--- a/Samples/RestPlugin/Package.nuspec
+++ b/Samples/RestPlugin/Package.nuspec
@@ -13,23 +13,26 @@
     <releaseNotes>Revision: $Revision$</releaseNotes>
     <projectUrl>https://github.com/awesome-inc/NuPlug</projectUrl>
     <dependencies>
-      <dependency id="Autofac" version="3.5.2" />
-      <dependency id="Autofac.WebApi2" version="3.4.0" />
-      <dependency id="Microsoft.AspNet.Cors" version="5.2.3" />
-      <dependency id="Microsoft.AspNet.WebApi.Client" version="5.2.3" />
-      <dependency id="Microsoft.AspNet.WebApi.Core" version="5.2.3" />
-      <dependency id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" />
-      <dependency id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" />
-      <dependency id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" />
-      <dependency id="Microsoft.Owin" version="3.0.1" />
-      <dependency id="Microsoft.Owin.Cors" version="3.0.1" />
-      <dependency id="Microsoft.Owin.Diagnostics" version="3.0.1" />
-      <dependency id="Microsoft.Owin.Host.HttpListener" version="3.0.1" />
-      <dependency id="Microsoft.Owin.Hosting" version="3.0.1" />
-      <dependency id="Microsoft.Owin.SelfHost" version="3.0.1" />
-      <dependency id="Newtonsoft.Json" version="7.0.1" />
-      <dependency id="Owin" version="1.0" />
-      <dependency id="Swashbuckle.Core" version="5.1.5" />
+      <group targetFramework="net45">
+
+        <dependency id="Autofac" version="3.5.2" />
+        <dependency id="Autofac.WebApi2" version="3.4.0" />
+        <dependency id="Microsoft.AspNet.Cors" version="5.2.3" />
+        <dependency id="Microsoft.AspNet.WebApi.Client" version="5.2.3" />
+        <dependency id="Microsoft.AspNet.WebApi.Core" version="5.2.3" />
+        <dependency id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" />
+        <dependency id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" />
+        <dependency id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" />
+        <dependency id="Microsoft.Owin" version="3.0.1" />
+        <dependency id="Microsoft.Owin.Cors" version="3.0.1" />
+        <dependency id="Microsoft.Owin.Diagnostics" version="3.0.1" />
+        <dependency id="Microsoft.Owin.Host.HttpListener" version="3.0.1" />
+        <dependency id="Microsoft.Owin.Hosting" version="3.0.1" />
+        <dependency id="Microsoft.Owin.SelfHost" version="3.0.1" />
+        <dependency id="Newtonsoft.Json" version="9.0.1" />
+        <dependency id="Owin" version="1.0" />
+        <dependency id="Swashbuckle.Core" version="5.3.2" />
+      </group>
     </dependencies>
   </metadata>
   <files>
