--- a/Samples/ConsoleSample/ConsoleSample.csproj
+++ b/Samples/ConsoleSample/ConsoleSample.csproj
@@ -41,11 +41,12 @@
       <HintPath>..\..\packages\Microsoft.Web.Xdt.2.1.1\lib\net40\Microsoft.Web.XmlTransform.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\..\packages\NLog.4.2.0\lib\net45\NLog.dll</HintPath>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NLog.4.3.5\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="NuGet.Core, Version=2.10.1.766, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NuGet.Core.2.10.1\lib\net40-Client\NuGet.Core.dll</HintPath>
+    <Reference Include="NuGet.Core, Version=2.11.1.812, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NuGet.Core.2.11.1\lib\net40-Client\NuGet.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -83,15 +84,15 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\packages\GitVersionTask.3.3.0\build\dotnet\GitVersionTask.targets" Condition="Exists('..\..\packages\GitVersionTask.3.3.0\build\dotnet\GitVersionTask.targets')" />
+  <Import Project="..\..\packages\GitVersionTask.3.5.4\Build\dotnet\GitVersionTask.targets" Condition="Exists('..\..\packages\GitVersionTask.3.5.4\Build\dotnet\GitVersionTask.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\GitVersionTask.3.3.0\build\dotnet\GitVersionTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\GitVersionTask.3.3.0\build\dotnet\GitVersionTask.targets'))" />
-    <Error Condition="!Exists('..\..\packages\OneClickBuild.1.8.0\build\OneClickBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\OneClickBuild.1.8.0\build\OneClickBuild.targets'))" />
+    <Error Condition="!Exists('..\..\packages\GitVersionTask.3.5.4\Build\dotnet\GitVersionTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\GitVersionTask.3.5.4\Build\dotnet\GitVersionTask.targets'))" />
+    <Error Condition="!Exists('..\..\packages\OneClickBuild.1.10.2\build\OneClickBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\OneClickBuild.1.10.2\build\OneClickBuild.targets'))" />
   </Target>
-  <Import Project="..\..\packages\OneClickBuild.1.8.0\build\OneClickBuild.targets" Condition="Exists('..\..\packages\OneClickBuild.1.8.0\build\OneClickBuild.targets')" />
+  <Import Project="..\..\packages\OneClickBuild.1.10.2\build\OneClickBuild.targets" Condition="Exists('..\..\packages\OneClickBuild.1.10.2\build\OneClickBuild.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
