--- a/Samples/ConsoleSample/ConsoleSample.csproj
+++ b/Samples/ConsoleSample/ConsoleSample.csproj
@@ -71,7 +71,7 @@
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
+    <EmbeddedResource Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\NuPlug\NuPlug.csproj">
@@ -84,15 +84,15 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\packages\GitVersionTask.3.5.4\Build\dotnet\GitVersionTask.targets" Condition="Exists('..\..\packages\GitVersionTask.3.5.4\Build\dotnet\GitVersionTask.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\GitVersionTask.3.5.4\Build\dotnet\GitVersionTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\GitVersionTask.3.5.4\Build\dotnet\GitVersionTask.targets'))" />
     <Error Condition="!Exists('..\..\packages\OneClickBuild.1.10.2\build\OneClickBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\OneClickBuild.1.10.2\build\OneClickBuild.targets'))" />
+    <Error Condition="!Exists('..\..\packages\GitVersionTask.3.6.0\build\dotnet\GitVersionTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\GitVersionTask.3.6.0\build\dotnet\GitVersionTask.targets'))" />
   </Target>
   <Import Project="..\..\packages\OneClickBuild.1.10.2\build\OneClickBuild.targets" Condition="Exists('..\..\packages\OneClickBuild.1.10.2\build\OneClickBuild.targets')" />
+  <Import Project="..\..\packages\GitVersionTask.3.6.0\build\dotnet\GitVersionTask.targets" Condition="Exists('..\..\packages\GitVersionTask.3.6.0\build\dotnet\GitVersionTask.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
